Fix a contrast error that was the only thing stopping a 100% lighthouse score.

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -70,11 +70,7 @@ header h1:before {
 header h2 {
   font-size: 18px;
   font-weight: 300;
-  color: #666;
-  a {
-    color: #666;
-    text-shadow: none;
-  }
+  color: #CCC;
 }
 
 #downloads .btn {
